--- a/notebooks/20230501  test tcp comms.ipynb
+++ b/notebooks/20230501  test tcp comms.ipynb
@@ -2,24 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../')\n",
-    "import smartscan as ss\n",
-    "import asyncio\n",
-    "import pytest\n",
-    "from unittest import mock\n",
-    "from smartscan.TCP import TCPClient\n",
-    "from asyncio.streams import StreamReader, StreamWriter\n",
     "import socket\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,11 +25,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'hello\\r\\n\\r\\n'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "send_tcp_messge('localhost',12345,'ADD_POINT 100 120')"
+    "send_tcp_messge('127.0.0.1',54333,'hello\\r\\n')"
    ]
   },
   {
@@ -113,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
