--- a/notebooks/20230607 - measurement controller gpcam.ipynb
+++ b/notebooks/20230607 - measurement controller gpcam.ipynb
@@ -1,20 +1,16 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
+    "import numpy as np\n",
+    "import random\n",
+    "import matplotlib.pyplot as plt\n",
     "import smartscan as ss\n",
-    "from importlib import reload"
+    "from pathlib import Path"
    ]
   },
   {
@@ -23,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ctrl = ss.commander.RandomController('localhost', 54333,sleep_time=0.2)"
+    "sm = ss.SmartScan('localhost', 12345)"
    ]
   },
   {
@@ -32,9 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ctrl.get_scan_info()\n",
-    "# ctrl.parse_file(example_map_file)\n",
-    "ctrl.parse_file()"
+    "sm.sgm4.connect()"
    ]
   },
   {
@@ -43,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ctrl.start_scan(n_init=2, max_iter=500)"
+    "sm.open()"
    ]
   },
   {
@@ -52,7 +46,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ctrl.data_by_position"
+    "sm.sgm4.send_command('MEASURE')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sm.sgm4.ADD_POINT(-1500.0,-1600.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sm.sgm4.axes"
    ]
   }
  ],
