--- a/notebooks/test_h5py.ipynb
+++ b/notebooks/test_h5py.ipynb
@@ -1,95 +1,14 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import h5py\n",
     "from pathlib import Path\n",
-    "import smartscan as ss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "example_map_file = Path(r\"D:\\data\\SGM4\\testing\\controller_9.h5\")\n",
-    "assert example_map_file.is_file()\n",
-    "# example_map_file = Path(r\"\\\\uni.au.dk\\dfs\\Nat_ISA-SGM4\\AU-SGM4\\Data\\2023\\Testing\\Controller_11.h5\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file = ss.SGM4FileReader(example_map_file,swmr=True) \n",
-    "file.open()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from importlib import reload\n",
-    "reload(ss)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cmd = ss.commander.RandomController('localhost', 12345)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cmd.get_scan_info()\n",
-    "cmd.parse_file(example_map_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cmd.update_stack()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cmd.samples.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import time\n",
     "import numpy as np"
    ]
   },
@@ -99,10 +18,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out = []\n",
-    "for k,v in cmd.data_by_position.items(): \n",
-    "    out.append([*k,*np.mean(v,axis=0)])\n",
-    "np.array(out)[:10]"
+    "path_local = Path(r\"D:\\data\\SGM4\\testing\\controller_9.h5\")\n",
+    "assert path_local.is_file(), f\"Expected {path_local} to be a file\"\n",
+    "path_remote = Path(r\"\\\\uni.au.dk\\dfs\\Nat_ISA-SGM4\\AU-SGM4\\Data\\2023\\Testing\\Controller_9.h5\")\n",
+    "assert path_remote.is_file(), f\"Expected {path_remote} to be a file\"\n"
    ]
   },
   {
@@ -111,14 +30,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.start_scan(n_init=10, max_iter=100)"
+    "data_address = 'Entry/Data/TransformedData'\n",
+    "pos_address = 'Entry/Data/ScanDetails/SetPositions'"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "addr = data_address\n",
+    "\n",
+    "with h5py.File(path_local,'r',swmr=True) as file:\n",
+    "    t0 = time.time()\n",
+    "    ds_0= file[addr][()]\n",
+    "    print(f'[()]: {time.time()-t0:.3f}s')\n",
+    "    t1 = time.time()\n",
+    "    ds_1 = file.get(addr)\n",
+    "    print(f'get: {time.time()-t1:.3f}s')\n",
+    "    print(f'all close: {np.allclose(ds_0,ds_1)}')\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "with h5py.File(path_local,'r',swmr=True) as file:\n",
+    "    # t0 = time.time()\n",
+    "    ds_0 = file[addr][()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "with h5py.File(path_local,'r',swmr=True) as file:\n",
+    "    # t0 = time.time()\n",
+    "    ds_1 = file.get(addr,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_0.shape, ds_1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File(path_local,'r',swmr=True) as file:\n",
+    "    # t0 = time.time()\n",
+    "    ds_1 = file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_1"
+   ]
   }
  ],
  "metadata": {
