--- a/notebooks/20230619 - gpcam live tests.ipynb
+++ b/notebooks/20230619 - gpcam live tests.ipynb
@@ -33,6 +33,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -60,7 +65,7 @@
       "Connecting to localhost:54333\n",
       "Sending message: FILENAME\n",
       "Waiting for response\n",
-      "Received: FILENAME D:\\Data\\2023\\06June\\CS008\\Test1_6.h5\n",
+      "Received: FILENAME D:\\Data\\2023\\Testing\\GPCamv3_2.h5\n",
       "\n"
      ]
     }
@@ -81,22 +86,19 @@
       "Connecting to localhost:54333\n",
       "Sending message: FILENAME\n",
       "Waiting for response\n",
-      "Received: FILENAME D:\\Data\\2023\\06June\\CS008\\Test1_6.h5\n",
+      "Received: FILENAME D:\\Data\\2023\\Testing\\GPCamv3_2.h5\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Labview AJ\\pycomm\\smartscan\\smartscan\\file.py:55: UserWarning: swmr=True only affects read ('r') mode. For swmr write mode, set f.swmr_mode = True after opening the file.\n",
-      "  with h5py.File(self.filename, 'a', swmr=self.swmr) as f:\n"
      ]
     }
    ],
    "source": [
     "sm.open()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -147,6 +149,7 @@
     }
    ],
    "source": [
+    "\n",
     "sm.sgm4._limits = None\n",
     "sm.sgm4.limits"
    ]
@@ -157,14 +160,23 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found 145 spectra\n",
+      "data shape (145, 640, 400)\n",
+      "pos size 145 data size 145\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd815aa10c6148e7930113380a3a3a0d",
+       "model_id": "6f21708407b54b3a9f709a71439c1a4b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Combining same position data: 0it [00:00, ?it/s]"
+       "Combining same position data:   0%|          | 0/145 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -177,51 +189,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
-       "\n",
-       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        ...,\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.],\n",
-       "        [0., 0., 0., ..., 0., 0., 0.]]])"
+       "(145, 640, 400)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sm.values"
+    "sm._raw_data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 5.00000000e+01, -5.00000000e+01],\n",
-       "       [-9.99999999e+08, -9.99999999e+08]])"
+       "array([[ 50., -50.]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,23 +229,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(145, 640, 400)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from itertools import product"
+    "sm._raw_data.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4191397092.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[11], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    rasie Exception\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "rasie Exception"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +285,7 @@
        "       [False, False]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +333,7 @@
        "'ERROR 1 badcommand'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +364,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +385,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m sm\u001b[39m.\u001b[39;49msgm4\u001b[39m.\u001b[39;49maxes\n",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m sm\u001b[39m.\u001b[39;49msgm4\u001b[39m.\u001b[39;49maxes\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'SGM4Controller' object has no attribute 'axes'"
      ]
     }
@@ -374,6 +393,13 @@
    "source": [
     "sm.sgm4.axes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
