--- a/notebooks/20230622 - tcp data transfer.ipynb
+++ b/notebooks/20230622 - tcp data transfer.ipynb
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
     "        while not self._should_stop:\n",
     "            pos, data = await self.fetch_data()\n",
     "            if pos is not None:\n",
-    "                await self._raw_data_queue.put((pos, data))\n",
+    "                self._raw_data_queue.put_nowait((pos, data))\n",
     "                self.logger.debug(f'Put data in queue: {pos}, {data}')\n",
     "            else:\n",
     "                await asyncio.sleep(.1)\n",
@@ -563,7 +563,7 @@
     "            self.logger.info('reduction looping...')\n",
     "            pos,data = await self._raw_data_queue.get()\n",
     "            reduced = np.asarray([data.mean(), data.std()])\n",
-    "            self._reduced_data_queue.put((pos,reduced))      \n",
+    "            self._reduced_data_queue.put_nowait((pos,reduced))      \n",
     "            # await asyncio.sleep(.2)\n",
     "    \n",
     "    async def training_loop(self):\n",
@@ -593,13 +593,13 @@
     "    async def killer_loop(self):\n",
     "        await asyncio.sleep(10)\n",
     "        self.logger.info('Killer loop strikes!.')\n",
-    "        await self.stop()\n",
+    "        self.stop()\n",
     "       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
      "text": [
       "Initialized AsyncScanManager.\n",
       "Received data with length 0.25 MB\n",
-      "[-1730.] [0.4553 0.37   0.3426 ... 0.2799 0.4764 0.0135]\n"
+      "[-1730.] [0.3851 0.2868 0.7574 ... 0.5644 0.5847 0.998 ]\n"
      ]
     }
    ],
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -638,32 +638,32 @@
       "gp looping...\n",
       "prediction looping...\n",
       "training looping...\n",
+      "Received data with length 0.25 MB\n",
+      "Put data in queue: [-1730.], [0.8157 0.3759 0.7916 ... 0.1621 0.963  0.358 ]\n",
+      "reduction looping...\n",
+      "gp looping...\n",
+      "gp looping...\n",
+      "prediction looping...\n",
+      "training looping...\n",
       "gp looping...\n",
       "Received data with length 0.25 MB\n",
-      "Put data in queue: [-1730.], [0.061  0.6025 0.5027 ... 0.544  0.8986 0.    ]\n",
+      "Put data in queue: [-1730.], [0.787  0.1241 0.9403 ... 0.3345 0.8313 0.493 ]\n",
       "reduction looping...\n",
-      "gp looping...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\stein\\AppData\\Local\\Temp\\ipykernel_15680\\29304473.py:82: RuntimeWarning: coroutine 'Queue.put' was never awaited\n",
-      "  self._reduced_data_queue.put((pos,reduced))\n",
-      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "prediction looping...\n",
+      "training looping...\n",
+      "gp looping...\n",
+      "gp looping...\n",
+      "prediction looping...\n",
+      "training looping...\n",
+      "gp looping...\n",
+      "Received data with length 0.25 MB\n",
+      "Put data in queue: [-1730.], [0.0118 0.1597 0.7545 ... 0.3462 0.2326 0.    ]\n",
+      "reduction looping...\n",
       "prediction looping...\n",
       "training looping...\n",
       "gp looping...\n",
       "prediction looping...\n",
       "training looping...\n",
-      "gp looping...\n",
       "gp looping...\n",
       "Received data with length 0.25 MB\n"
      ]
@@ -675,11 +675,11 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[44], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mawait\u001b[39;00m tc\u001b[39m.\u001b[39mstart()\n",
-      "Cell \u001b[1;32mIn[41], line 102\u001b[0m, in \u001b[0;36mAsyncScanManager.start\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    100\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlogger\u001b[39m.\u001b[39minfo(\u001b[39m'\u001b[39m\u001b[39mStarting all loops.\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m    101\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_should_stop \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m--> 102\u001b[0m \u001b[39mawait\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mall_loops()\n",
-      "Cell \u001b[1;32mIn[41], line 34\u001b[0m, in \u001b[0;36mAsyncScanManager.all_loops\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     31\u001b[0m \u001b[39mStart all the loops.\u001b[39;00m\n\u001b[0;32m     32\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     33\u001b[0m loop_methods \u001b[39m=\u001b[39m [\u001b[39mgetattr\u001b[39m(\u001b[39mself\u001b[39m, method)() \u001b[39mfor\u001b[39;00m method \u001b[39min\u001b[39;00m \u001b[39mdir\u001b[39m(\u001b[39mself\u001b[39m) \u001b[39mif\u001b[39;00m method\u001b[39m.\u001b[39mendswith(\u001b[39m'\u001b[39m\u001b[39m_loop\u001b[39m\u001b[39m'\u001b[39m)]\n\u001b[1;32m---> 34\u001b[0m \u001b[39mawait\u001b[39;00m asyncio\u001b[39m.\u001b[39mgather(\u001b[39m*\u001b[39mloop_methods)\n\u001b[0;32m     35\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlogger\u001b[39m.\u001b[39minfo(\u001b[39m'\u001b[39m\u001b[39mAll loops finished.\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[41], line 65\u001b[0m, in \u001b[0;36mAsyncScanManager.fetch_data_loop\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\" Get data from SGM4\"\"\"\u001b[39;00m\n\u001b[0;32m     64\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_should_stop:\n\u001b[1;32m---> 65\u001b[0m     pos, data \u001b[39m=\u001b[39m \u001b[39mawait\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfetch_data()\n\u001b[0;32m     66\u001b[0m     \u001b[39mif\u001b[39;00m pos \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m     67\u001b[0m         \u001b[39mawait\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_raw_data_queue\u001b[39m.\u001b[39mput((pos, data))\n",
-      "Cell \u001b[1;32mIn[41], line 55\u001b[0m, in \u001b[0;36mAsyncScanManager.fetch_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     43\u001b[0m msg_code \u001b[39m=\u001b[39m vals[\u001b[39m0\u001b[39m]\n\u001b[0;32m     44\u001b[0m vals \u001b[39m=\u001b[39m vals[\u001b[39m1\u001b[39m:]\n\u001b[0;32m     45\u001b[0m \u001b[39mmatch\u001b[39;00m msg_code:\n\u001b[0;32m     46\u001b[0m     \u001b[39mcase\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mERROR\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m     47\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlogger\u001b[39m.\u001b[39mwarning(message)\n\u001b[0;32m     48\u001b[0m         \u001b[39mreturn\u001b[39;00m message, \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     49\u001b[0m     \u001b[39mcase\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mNO_DATA\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m     50\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlogger\u001b[39m.\u001b[39mwarning(message)\n\u001b[0;32m     51\u001b[0m         \u001b[39mreturn\u001b[39;00m message, \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     52\u001b[0m     \u001b[39mcase\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mMEASURE\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m     53\u001b[0m         n_pos \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(vals[\u001b[39m0\u001b[39m])\n\u001b[0;32m     54\u001b[0m         pos \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray(vals[\u001b[39m1\u001b[39m:n_pos], dtype\u001b[39m=\u001b[39m\u001b[39mfloat\u001b[39m)\n\u001b[1;32m---> 55\u001b[0m         data \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49masarray(vals[n_pos\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m:], dtype\u001b[39m=\u001b[39;49m\u001b[39mfloat\u001b[39;49m)\n\u001b[0;32m     56\u001b[0m         \u001b[39m# data = data.reshape(640,400)\u001b[39;00m\n\u001b[0;32m     57\u001b[0m         \u001b[39mreturn\u001b[39;00m pos, data\n\u001b[0;32m     58\u001b[0m     \u001b[39mcase\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m_\u001b[39;00m:\n\u001b[0;32m     59\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlogger\u001b[39m.\u001b[39mwarning(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mUnknown message code: \u001b[39m\u001b[39m{\u001b[39;00mmsg_code\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m     60\u001b[0m         \u001b[39mreturn\u001b[39;00m message, \u001b[39mNone\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[51], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mawait\u001b[39;00m tc\u001b[39m.\u001b[39mstart()\n",
+      "Cell \u001b[1;32mIn[48], line 102\u001b[0m, in \u001b[0;36mAsyncScanManager.start\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    100\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlogger\u001b[39m.\u001b[39minfo(\u001b[39m'\u001b[39m\u001b[39mStarting all loops.\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m    101\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_should_stop \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m--> 102\u001b[0m \u001b[39mawait\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mall_loops()\n",
+      "Cell \u001b[1;32mIn[48], line 34\u001b[0m, in \u001b[0;36mAsyncScanManager.all_loops\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     31\u001b[0m \u001b[39mStart all the loops.\u001b[39;00m\n\u001b[0;32m     32\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     33\u001b[0m loop_methods \u001b[39m=\u001b[39m [\u001b[39mgetattr\u001b[39m(\u001b[39mself\u001b[39m, method)() \u001b[39mfor\u001b[39;00m method \u001b[39min\u001b[39;00m \u001b[39mdir\u001b[39m(\u001b[39mself\u001b[39m) \u001b[39mif\u001b[39;00m method\u001b[39m.\u001b[39mendswith(\u001b[39m'\u001b[39m\u001b[39m_loop\u001b[39m\u001b[39m'\u001b[39m)]\n\u001b[1;32m---> 34\u001b[0m \u001b[39mawait\u001b[39;00m asyncio\u001b[39m.\u001b[39mgather(\u001b[39m*\u001b[39mloop_methods)\n\u001b[0;32m     35\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlogger\u001b[39m.\u001b[39minfo(\u001b[39m'\u001b[39m\u001b[39mAll loops finished.\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[48], line 65\u001b[0m, in \u001b[0;36mAsyncScanManager.fetch_data_loop\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\" Get data from SGM4\"\"\"\u001b[39;00m\n\u001b[0;32m     64\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_should_stop:\n\u001b[1;32m---> 65\u001b[0m     pos, data \u001b[39m=\u001b[39m \u001b[39mawait\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfetch_data()\n\u001b[0;32m     66\u001b[0m     \u001b[39mif\u001b[39;00m pos \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m     67\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_raw_data_queue\u001b[39m.\u001b[39mput_nowait((pos, data))\n",
+      "Cell \u001b[1;32mIn[48], line 55\u001b[0m, in \u001b[0;36mAsyncScanManager.fetch_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     43\u001b[0m msg_code \u001b[39m=\u001b[39m vals[\u001b[39m0\u001b[39m]\n\u001b[0;32m     44\u001b[0m vals \u001b[39m=\u001b[39m vals[\u001b[39m1\u001b[39m:]\n\u001b[0;32m     45\u001b[0m \u001b[39mmatch\u001b[39;00m msg_code:\n\u001b[0;32m     46\u001b[0m     \u001b[39mcase\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mERROR\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m     47\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlogger\u001b[39m.\u001b[39mwarning(message)\n\u001b[0;32m     48\u001b[0m         \u001b[39mreturn\u001b[39;00m message, \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     49\u001b[0m     \u001b[39mcase\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mNO_DATA\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m     50\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlogger\u001b[39m.\u001b[39mwarning(message)\n\u001b[0;32m     51\u001b[0m         \u001b[39mreturn\u001b[39;00m message, \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     52\u001b[0m     \u001b[39mcase\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mMEASURE\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m     53\u001b[0m         n_pos \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(vals[\u001b[39m0\u001b[39m])\n\u001b[0;32m     54\u001b[0m         pos \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray(vals[\u001b[39m1\u001b[39m:n_pos], dtype\u001b[39m=\u001b[39m\u001b[39mfloat\u001b[39m)\n\u001b[1;32m---> 55\u001b[0m         data \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49masarray(vals[n_pos\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m:], dtype\u001b[39m=\u001b[39;49m\u001b[39mfloat\u001b[39;49m)\n\u001b[0;32m     56\u001b[0m         \u001b[39m# data = data.reshape(640,400)\u001b[39;00m\n\u001b[0;32m     57\u001b[0m         \u001b[39mreturn\u001b[39;00m pos, data\n\u001b[0;32m     58\u001b[0m     \u001b[39mcase\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m_\u001b[39;00m:\n\u001b[0;32m     59\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlogger\u001b[39m.\u001b[39mwarning(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mUnknown message code: \u001b[39m\u001b[39m{\u001b[39;00mmsg_code\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m     60\u001b[0m         \u001b[39mreturn\u001b[39;00m message, \u001b[39mNone\u001b[39;00m\n",
       "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
      ]
     },
@@ -687,21 +687,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "prediction looping...\n",
-      "training looping...\n",
       "gp looping...\n",
-      "prediction looping...\n",
       "training looping...\n",
-      "gp looping...\n",
-      "gp looping...\n",
       "prediction looping...\n",
-      "training looping...\n",
       "gp looping...\n",
-      "prediction looping...\n",
       "training looping...\n",
-      "gp looping...\n",
       "prediction looping...\n",
-      "training looping...\n",
       "gp looping...\n",
       "gp looping...\n",
       "Killer loop strikes!.\n",
