--- a/tutorial/Load and Visualize.ipynb
+++ b/tutorial/Load and Visualize.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "To run this notebook, please install the smartscan library, as described in the readme.\n",
     "\n",
-    "The data can be obtained from the following link: [Smart Scan Data](https://drive.google.com/drive/folders/1Q6Q6Q6Z"
+    "The data can be obtained from the following link: [Smart Scan Data](10.5281/zenodo.10955408)"
    ]
   },
   {
