--- a/tutorial/Load and Visualize.ipynb
+++ b/tutorial/Load and Visualize.ipynb
@@ -84,7 +84,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
-    "ss.vornoi_plot(\n",
+    "ss.voronoi_plot(\n",
     "    points=df2D[[\"y\", \"x\"]].values,\n",
     "    values=df2D[\"curvature\"],\n",
     "    ax=ax,\n",
